<resources>
    <string name="app_name">Cadastro</string>
    <string name="nome_completo">Nome completo:</string>
    <string name="telefone">Telefone:</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_example">Ex: (12) 34567-8901</string>
    <string name="ingressar">Ingressar na lista de e-mails?</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="sex">Sexo</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="clean">Limpar</string>
    <string name="save">Salvar</string>
    <string-array name="estates">
        <item>
        AC
        </item>
        <item>
        AL
        </item>
        <item>
        AP
        </item>
        <item>
        AM
        </item>
        <item>
        BA
        </item>
        <item>
        CE
        </item>
        <item>
        DF
        </item>
        <item>
        ES
        </item>
        <item>
        GO
        </item>
        <item>
        MA
        </item>
        <item>
        MS
        </item>
        <item>
        MT
        </item>
        <item>
        MG
        </item>
        <item>
        PA
        </item>
        <item>
        PB
        </item>
        <item>
        PR
        </item>
        <item>
        PE
        </item>
        <item>
        PI
        </item>
        <item>
        RJ
        </item>
        <item>
        RN
        </item>
        <item>
        RS
        </item>
        <item>
        RO
        </item>
        <item>
        RR
        </item>
        <item>
        SC
        </item>
        <item>
        SP
        </item>
        <item>
        SE
        </item>
        <item>
        TO
        </item>
    </string-array>
</resources>