<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/nomeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameText"
        />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeEdit"
        />
    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_example"
        app:layout_constraintTop_toBottomOf="@id/phoneText"
        />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneEdit"
        />
    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        />
    <CheckBox
        android:id="@+id/emailCheckbox"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/emailEdit"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/emailCheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingressar"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/emailCheckbox"
        app:layout_constraintTop_toBottomOf="@id/emailEdit"
        />
    <TextView
        android:id="@+id/sexText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        app:layout_constraintStart_toStartOf="@id/emailCheckbox"
        app:layout_constraintTop_toBottomOf="@id/emailCheckbox"
        />
    <RadioGroup
        android:id="@+id/sexRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sexText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/sexMaleButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/male"
            />
        <RadioButton
            android:id="@+id/sexFemaleButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/female"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sexRadioGroup"
        />
    <EditText
        android:id="@+id/cityEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cityText"
        />
    <TextView
        android:id="@+id/estateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityEdit"
        />
    <Spinner
        android:id="@+id/estateSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/estateText"
        >
    </Spinner>
    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.49"
        android:text="@string/clean"
        android:layout_marginHorizontal="2dp"
        app:layout_constraintTop_toBottomOf="@id/estateSpinner"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.49"
        android:layout_marginHorizontal="2dp"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintTop_toBottomOf="@id/estateSpinner"
        app:layout_constraintEnd_toEndOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>